service-b/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-deployment
  namespace: my-services
  labels:
    app: service-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: bharathbeerappa/service-b:latest  # Replace with your actual image or image repository
        ports:
        - containerPort: 3002
