service-b/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: my-services
spec:
  selector:
    app: service-b
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 30002
  type: NodePort  # Change to LoadBalancer or NodePort if needed
